--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,18 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  max-width: 1920px;
 }
+.container {
+  width: 1280px;
+  margin: 0 auto;
+}
+.container hr {
+  border: 1px solid rgba(17, 17, 17, 0.15);
+  margin: 32px 0;
+}
+
+/* 
 
 .logo {
   height: 6em;
@@ -39,4 +48,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
