--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,8 @@
   max-width: 1920px;
 }
 .container {
-  max-width: 1280px;
-  margin: 0 auto;
+  /* max-width: 1280px; */
+  margin: 0 10px;
 }
 .container hr {
   border: 1px solid rgba(17, 17, 17, 0.15);
