--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -1,3 +1,44 @@
-.blog img {
+/* common styless*/
+.flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.blog > img {
   max-width: 845px;
+  border-radius: 8px;
+}
+.user-container img {
+  max-width: 60px;
+}
+.user-container {
+  margin-top: 34px;
+  margin-bottom: 16px;
+}
+.book-mark {
+  color: gray;
+}
+.read-time p {
+  margin-right: 10px;
+}
+.user-name {
+  margin-left: 24px;
+}
+.user-name h3 {
+  margin-bottom: 6px;
+}
+.title h1 {
+  line-height: 64px;
+}
+.title p {
+  margin: 15px 0;
+  color: rgba(17, 17, 17, 0.6);
+}
+.mark-as-read {
+  color: rgba(96, 71, 236, 1);
+  background-color: white;
+  text-decoration: underline;
+  margin-top: 38px;
+  margin-bottom: 0;
+  cursor: pointer;
 }
