--- a/src/components/BookMarked/BookMarked.css
+++ b/src/components/BookMarked/BookMarked.css
@@ -1,9 +1,16 @@
 .blog-title-length {
-  margin: 16px 30px;
+  margin: 24px 30px;
+}
+.blog-title-length h1 {
+  padding-top: 30px;
 }
 .blog-title {
   margin: 16px 0;
   border-radius: 8px;
   padding: 20px;
   background: white;
+}
+
+.bookMarked {
+  background-color: rgba(17, 17, 17, 0.05);
 }
